<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/agora">

        <RelativeLayout
            android:id="@+id/frame_professional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@android:drawable/dialog_holo_light_frame">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/doenca_perfil"
                android:textStyle="bold"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_below="@id/title1"
                android:text="@string/doenca_name"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profe_dis_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/nameLabel"
                android:layout_below="@id/title1"
                android:layout_marginTop="6dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/orphanumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_below="@id/nameLabel"
                android:text="@string/doenca_orphanumber"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profe_dis_Orphanum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/orphanumberLabel"
                android:layout_below="@id/nameLabel"
                android:layout_marginTop="6dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/expertLinkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_below="@id/orphanumberLabel"
                android:text="@string/doenca_expertlink"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profe_dis_Expertlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/expertLinkLabel"
                android:layout_below="@id/orphanumberLabel"
                android:layout_marginTop="6dp"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reference_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frame_professional"
            android:layout_margin="10dp"

            android:background="@drawable/shape_background_black">


            <TextView
                android:id="@+id/professional_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="Profissonais Especializados"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"

                />


            <ListView
                android:id="@+id/professional_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/professional_title"


                ></ListView>

        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
