<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"

    android:background="@android:drawable/dialog_holo_light_frame">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_toLeftOf="@+id/proarrow"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/disease_detalhe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"


            android:background="@null">

            <ImageView
                android:id="@+id/disease_detalhe_button1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/centro"
                android:background="@null" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail1">


            <TextView
                android:id="@+id/center_name"
                android:text="@string/default_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
            />

            <TextView

                android:id="@+id/center_setname"
                android:text="Cidade:2222 "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="2dp"
                android:layout_toRightOf="@id/center_name" />


            <TextView

                android:id="@+id/center_cidade"
                android:text="@string/default_cidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_below="@id/center_name" />


            <TextView

                android:id="@+id/center_setcidade"
                android:text="Cidade:2222 "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"

                android:layout_marginBottom="2dp"
                android:layout_toRightOf="@id/center_cidade"
                android:layout_below="@id/center_name" />

            <TextView

                android:id="@+id/center_estado"
                android:text="@string/default_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/center_cidade" />

            <TextView

                android:id="@+id/center_setestado"
                android:text="Cidade:2222 "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/center_estado"
                android:layout_below="@id/center_setcidade" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"

            android:orientation="horizontal">


        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/proarrow"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_background_black" />


</RelativeLayout>